--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,17 +4,17 @@ services:
     container_name: mysql8
     restart: unless-stopped
     mem_limit: 4g
+    env_file: ./.env
     environment:
-      MYSQL_ROOT_PASSWORD: 12345678
-      MYSQL_DATABASE: siren
-      MYSQL_USER: sirenuser
-      MYSQL_PASSWORD: 12345678
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - "3367:3306"
+      - "3367:${MYSQL_PORT}"
     volumes:
       - ./my.cnf:/etc/mysql/conf.d/my.cnf
       - db_data:/var/lib/mysql
-      - ./data:/data
     healthcheck:
       test: [ "CMD-SHELL", "MYSQL_PWD=$$MYSQL_PASSWORD mysqladmin ping -h 127.0.0.1 -usirenuser --silent" ]
       interval: 30s
@@ -22,18 +22,35 @@ services:
       retries: 5
       start_period: 30s
 
+  dbcli:
+    build:
+      context: .
+      dockerfile: dbcli.Dockerfile
+    container_name: dbcli
+    mem_limit: 4g
+    depends_on:
+      db:
+        condition: service_healthy
+    env_file: ./.env
+    volumes:
+      - ./data:/app/data:ro
+
   spark:
-    build: .
+    build:
+      context: .
+      dockerfile: analyticcli.Dockerfile
     container_name: spark
     mem_limit: 4g
     depends_on:
       db:
         condition: service_healthy
+      dbcli:
+        condition: service_completed_successfully
     ports:
       - "15002:15002"
+    env_file: ./.env
     environment:
-      MYSQL_HOST: "db"
-      MYSQL_PORT: "3306"
+      - JAVA_TOOL_OPTIONS=-Dlog4j2.disable.jmx=true
 
 volumes:
   db_data:
