--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-MYSQL_URL=jdbc:mysql://localhost:3366/
-USER=sirenuser
-PASSWORD=12345678
+MYSQL_ROOT_PASSWORD=12345678
+MYSQL_USER=sirenuser
+MYSQL_DATABASE=siren
+MYSQL_PASSWORD=12345678
+MYSQL_HOST=db
+MYSQL_PORT=3306
